[gd_scene load_steps=8 format=3 uid="uid://dvn7budmw0prc"]

[ext_resource type="Script" uid="uid://clr2w1rw2yfds" path="res://scripts/actors/VillagerThoughtController.gd" id="1_qwx5f"]
[ext_resource type="Script" uid="uid://cr27jxhuxc4rl" path="res://scripts/actors/VillagerSystem.gd" id="1_yugwr"]
[ext_resource type="Texture2D" uid="uid://ccsalc2it842c" path="res://assets/characters/npc_05.png" id="3_foovk"]
[ext_resource type="PackedScene" uid="uid://dslwxv0rhwedh" path="res://scripts/gameplay/ui/VillagerThoughtView.tscn" id="4_iqhb6"]
[ext_resource type="Script" uid="uid://cybmqqhhx016r" path="res://scripts/enable_when_player_is_below.gd" id="5_foovk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iqhb6"]
friction = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iqhb6"]
radius = 140.0
height = 544.782

[node name="Villager" type="Node2D" node_paths=PackedStringArray("thought", "thoughtView")]
y_sort_enabled = true
script = ExtResource("1_yugwr")
thought = NodePath("ThoughtController")
thoughtView = NodePath("VillagerThoughtView")

[node name="ThoughtController" type="Node" parent="."]
script = ExtResource("1_qwx5f")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
y_sort_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasGroup"]
position = Vector2(0, -32)
texture = ExtResource("3_foovk")
offset = Vector2(0, -96)

[node name="VillagerThoughtView" parent="." instance=ExtResource("4_iqhb6")]
z_index = 1
custom_minimum_size = Vector2(64, 64)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = -600.0
offset_right = -220.0
offset_bottom = -344.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 65541
physics_material_override = SubResource("PhysicsMaterial_iqhb6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(16, 24)
polygon = PackedVector2Array(-56, 64, 0, 96, 64, 64, 0, 32)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-16, 80, -56, 0, -74, -17, -78, -34, -88, -46, -88, -64, -72, -152, -96, -208, -95, -257, -72, -296, -38, -320, 8, -328, 41, -322, 72, -304, 89, -287, 104, -256, 104, -208, 88, -168, 72, -152, 72, -80, 88, -48, 88, -32, 72, -24, 64, -24, 56, 0, 56, 80)
script = ExtResource("5_foovk")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -64)
scale = Vector2(1.2, 0.939825)
shape = SubResource("CapsuleShape2D_iqhb6")

[connection signal="body_entered" from="Area2D" to="." method="_show_thought_on_player_collision_start"]
[connection signal="body_exited" from="Area2D" to="." method="_hide_thought_on_player_collision_start"]
